service/ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: websrvc
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
