service/ingress/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  # anotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: web-ingress
spec:
  rules:
  - host: mysite.local
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: websrvc
            port:
              number: 8080
